--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "homepage": "https://github.com/tzarick/pay-friends-back#readme",
   "devDependencies": {
+    "@types/colors": "^1.2.1",
     "@types/jest": "^27.0.1",
+    "@types/prompt": "^1.1.1",
     "jest": "^27.0.6",
     "typescript": "^4.3.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "colors": "^1.4.0",
+    "prompt": "^1.1.0"
+  }
 }
