--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^27.0.1",
     "@types/prompt": "^1.1.1",
     "jest": "^27.0.6",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
   },
   "dependencies": {
