--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "build": "tsc && pkg -t node14-win-x64 dist/src/index.js --output build/pay-friends-back.exe"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "colors": "^1.4.0",
+    "pkg": "^5.3.1",
     "prompt": "^1.1.0"
   }
 }
