--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "ts-node src/index.ts",
-    "build": "tsc && pkg -t node14-win-x64 dist/src/index.js --output build/pay-friends-back.exe"
+    "build": "tsc && pkg -t host dist/src/index.js --output build/pay-friends-back.exe"
   },
   "repository": {
     "type": "git",
@@ -23,13 +23,13 @@
     "@types/jest": "^27.0.1",
     "@types/prompt": "^1.1.1",
     "jest": "^27.0.6",
+    "pkg": "^5.3.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "colors": "^1.4.0",
-    "pkg": "^5.3.1",
     "prompt": "^1.1.0"
   }
 }
